<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="83dp"
        android:layout_height="727dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/my_synes"
            app:srcCompat="@drawable/stack_5858" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/my_lenses"
            app:srcCompat="@drawable/stack_5858" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/invite_friend"
            app:srcCompat="@drawable/users_267" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/notifications"
            app:srcCompat="@drawable/check_4831" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/friends"
            app:srcCompat="@drawable/users_267" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/friend_requests"
            app:srcCompat="@drawable/users_267" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/reset_password"
            app:srcCompat="@drawable/padlock_3089" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/contact_us"
            app:srcCompat="@drawable/mail_letter_3021" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/privacy_policy"
            app:srcCompat="@drawable/shield_security_3087" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/logout"
            app:srcCompat="@drawable/exit_logout_2859" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="333dp"
        android:layout_height="730dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="376dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView0"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="#3B7157"
            android:text="@string/my_synes"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="#3B7157"
            android:text="@string/my_lenses"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="#3B7157"
            android:text="@string/invite_friend"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="#3B7157"
            android:text="@string/notifications"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="#3B7157"
            android:text="@string/friends"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="#3B7157"
            android:text="@string/friend_requests"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="#3B7157"
            android:text="@string/reset_password"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="#3B7157"
            android:text="@string/contact_us"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="#3B7157"
            android:text="@string/privacy_policy"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="#3B7157"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>